tests/regression/errors/syntax_errors.csd
// Syntax errors that should be caught gracefully

// Missing variable type
sus x = 42

// Invalid function syntax
slay broken_func( {
    vibez.spill("broken")
}

// Unclosed brackets
sus array []drip = [1, 2, 3

// Invalid operator
sus result drip = 5 ++ 3

// Missing closing brace
ready (based) {
    vibez.spill("missing brace")
